Fix Audio Formats (#13)
* fix audio formats, Terms Of Service, Light Backend Refactor, Docs

* updated docs
